--- a/content.tex
+++ b/content.tex
@@ -3,17 +3,17 @@
 
 \input{region_of_interest}
 
-\input{seismic_hazard}
+% \input{seismic_hazard}
 
-\input{analysis_parameters}
+% \input{analysis_parameters}
 
-\input{hazard_analysis_results}
+% \input{hazard_analysis_results}
 
-\input{discussion_of_results}
+% \input{discussion_of_results}
 
-\input{conclusion}    
+% \input{conclusion}    
 
-\input{Acknowledgements}
+% \input{Acknowledgements}
 
 
 
