--- a/region_of_interest.tex
+++ b/region_of_interest.tex
@@ -1,16 +1,17 @@
 
+\begin{figure*}[!ht] 
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-01}
+	\caption{Pending}
+	\label{fig:iran}
+\end{figure*}
+
 \section{Region of Interest}
 
 Seismic activity in the Iranian plateau is dominated by the tectonic contacts between the Arabian, Eurasian, and Indian plates, which confine the region laterally between the Indian and Eurasian plates, and the Arabian and eastern Asia-Minor plates to the east and west, respectively. These confinement and tectonic collisions give rise to the Zagros, Alborz, and east Iranian mountain ranges, and defines the geology of the region. Based these conditions, Iranian seismicity is typically divided into various seismic zones, varying from as few as four to as many as twenty-three \citep[e.g.,][]{Stocklin1968, Berberian1976, Tavakoli1999}. Here, we adopt the division proposed by \citet{Karimiparidari2013}, which consists of six seismic zones: Azerbaijan, Alborz, Kopeh-Dagh, Zagros, Central-East, and Makram (Fig.~\ref{fig:iran}).
 
 Within this context, we define our region of interest between longitudes 43.5\textdegree{}E and 61.5\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Fig.~\ref{fig:iran}. Note that these limits correspond to the effective region of interest for which we will present results. Our calculations, however, included data from a 1\textdegree{}-perimeter larger region as indicated in the figure, which allows to avoid the artificial decay effect from the smoothed seismicity along and near the edges of the region of interest. As seen in Fig.~\ref{fig:iran}, this geographical area encloses the northern part of Iran, which is the focus of our study, and includes the complete seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, as well as parts of the Zagros and Central-East seismic zones. The following sections describe the tectonics and seismicity of these regions in greater detail.
 
-\begin{figure*}[!ht] 
-	\centering
-	\includegraphics[scale=0.8\textwidth]{figures/pdf/figure-01}
-	\caption{Pending}
-	\label{fig:iran}
-\end{figure*}
 
 
 
