--- a/introduction.tex
+++ b/introduction.tex
@@ -9,7 +9,7 @@ According to this tectonic setting and the geologic provinces of the plateau, Ir
 
 Over the last three decades there have been multiple efforts to better estimate the seismic hazard and assess seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE}. These studies have been, in part, intended to help improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. While improvements in design practice are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran, other indicators suggest high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are necessary.
 
-Northern Iran houses about 41 percent (32 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Orumieh, Rasht, and Ardabil. This region has suffered the devastating effects of earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}. Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard in the region \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between different studies, the importance of quantifying uncertainties, and the need for considering all potential faults in the region---even if believed inactive---by adopting new methodologies and the latest available data.
+Northern Iran houses about 41 percent (32 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Urmia, Rasht, and Ardabil. This region has suffered the devastating effects of earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}. Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard in the region \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between different studies, the importance of quantifying uncertainties, and the need for considering all potential faults in the region---even if believed inactive---by adopting new methodologies and the latest available data.
 
 However useful, most previous studies focus on particular locations or are based on specific categorization of seismogenic faults, which are often subjectively interpreted and limited to the availability data. Here, we use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Boyd2008, Kalkan2009, Moschetti2014}. Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to reduce the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh; but for completeness, we also consider the partial contribution of the areas of Zagros and the central-east seismic zones within our domain of interest (see Figure \ref{fig:Iran}). In addition, for comparison purposes, we obtain results for the the combination of all seismic zones as a uniform region.
 
