--- a/region-of-interest.tex
+++ b/region-of-interest.tex
@@ -2,17 +2,23 @@
 \begin{figure*}[!ht] 
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-01}
-	\caption{Pending}
+	\caption{Region of interest and Iranian seismic zones. At the top, the map of Iran and surrounding countries with shaded relief in the background and the Iranian seismic zones \citep[after][]{Karimiparidari2013} and region of interest in the foreground. The dashed box indicates the complete region of interest and the thicker line box indicates the effective area for which seismic hazard is estimated. The effective region of interest is shown in greater detail at the bottom. Details include the location of the major urban centers and seismic faults in northern Iran.}
 	\label{fig:iran}
 \end{figure*}
 
 \section{Region of Interest}
 
-Seismic activity in the Iranian plateau is dominated by the tectonic contacts between the Arabian, Eurasian, and Indian plates, which confine the region laterally between the Indian and Eurasian plates, and the Arabian and eastern Asia-Minor plates to the east and west, respectively. These confinement and tectonic collisions give rise to the Zagros, Alborz, and east Iranian mountain ranges, and defines the geology of the region. Based these conditions, Iranian seismicity is typically divided into various seismic zones, varying from as few as four to as many as twenty-three \citep[e.g.,][]{Stocklin1968, Berberian1976, Tavakoli1999}. Here, we adopt the division proposed by \citet{Karimiparidari2013}, which consists of six seismic zones: Azerbaijan, Alborz, Kopeh-Dagh, Zagros, Central-East, and Makram (Fig.~\ref{fig:iran}).
+Seismic activity in the Iranian plateau is dominated by the tectonic contacts between the Arabian, Eurasian, and Indian plates, which confine the region laterally between the Indian and Eurasian plates, and the Arabian and eastern Asia-Minor plates to the east and west, respectively. This setting gives rise to the Zagros, Alborz, and east Iranian mountain ranges, and defines the geology of the region. Based on these conditions, Iranian seismicity is typically divided into various seismic zones, varying from as few as four to as many as twenty-three \citep[e.g.,][]{Stocklin1968, Berberian1976, Tavakoli1999}. Here, we adopt the model proposed by \citet{Karimiparidari2013}, which consists of six seismic zones: Azerbaijan, Alborz, Kopeh-Dagh, Zagros, Central-East, and Makram (Fig.~\ref{fig:iran}).
 
-Within this context, we define our region of interest between longitudes 43.5\textdegree{}E and 61.5\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Fig.~\ref{fig:iran}. Note that these limits correspond to the effective region of interest for which we will present results. Our calculations, however, included data from a 1\textdegree{}-perimeter larger region as indicated in the figure, which allows to avoid the artificial decay effect from the smoothed seismicity along and near the edges of the region of interest. As seen in Fig.~\ref{fig:iran}, this geographical area encloses the northern part of Iran, which is the focus of our study, and includes the complete seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, as well as parts of the Zagros and Central-East seismic zones. The following sections describe the tectonics and seismicity of these regions in greater detail.
+Within this context, we define our region of interest between longitudes 43.5\textdegree{}E and 61.5\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Fig.~\ref{fig:iran}. These limits correspond to the effective region of interest for which we will present results ins subsequent sections. Our calculations, however, included data from a slightly larger region with a 0.5\textdegree{}-perimeter as indicated in the figure. This is done to avoid the artificial decay effect that results from smoothing the seismicity along and near the edges of the region of interest. The effective region has an area of 1,703 km $\times$ 667 km, and as shown in Fig.~\ref{fig:iran}, it encloses the northern part of Iran with the complete seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, and portions of the Zagros and Central-East seismic zones.
+
+At the northeast of Iran, the seismic zone of Azerbaijan is strongly controlled by the effects of the north Tabriz fault (NTF) system. This system is a complex northwest-trending structure with right-lateral, strike-slip faulting mechanisms \citep{Berberian1999}. The NTF has ruptured in multiple occasions in the last few centuries of which there are historical accounts.  
 
 
+
+% There were three earthquakes from 1721-86 that ruptured the North Tabriz Fault system from southeast to northwest. The Tabriz region is in the Araxes structural block of northwestern Iran, southwest of the continuation of the western Alborz Mountains towards the Caucasus. The North Tabriz Fault (NTF) is a complex northwest-trending structure, which contains evidence observed on aerial photographs, and vertical displacement with the north side up, of right-lateral strike-slip displacement \citep{Berberian1999}.
+
+% The NTF system and nearby reverse faults ruptured from southeast to northwest in three earthquakes over 65 years: the Shebli earthquake with magnitude 7.3 in 1721 on the southeastern NTF with a surface rupture more than 35 km long, reported by \citet{Jones1834} the Tabriz earthquake with magnitude 7.4 in 1780 on the northwestern NTF, with a surface rupture more than 42 km long and vertical separation of 2 to 4 $m$; and the Marand-Mishu earthquake with magnitude of 6.3 in 1786 on the Mishu reverse fault and the Sufian segment of the NTF. Another earthquake with  magnitude 5.5 struck the Tasuj reverse fault farther west in 1807 and an earthquake of M 6.7 took place along the South Bozqush reverse fault farther southeast in 1879. Prior to the 1721-86 earthquake sequence, Tabriz was shaken by earthquakes in 858 (M 6.0), 1042 (M 7.3), 1273 (M ~ 6.5), and 1304 (M 6.7)\citep{Berberian1999}. Most recently, earthquakes with $M_w$ 6.1 in 1997 and $M_w$ 6.4 in 2012 occurred in Ardabil and Tabriz, respectively. These earthquakes caused around 1500 casualties and extensive damage \citep{USGS_ardabil,USGS_tabriz}.\\
 
 
 
